[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
position = Vector2( 0, 16.5 )
current = true
limit_left = -320
limit_top = -160
limit_right = 320
limit_bottom = 160
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
editor_draw_limits = true
script = ExtResource( 1 )

[node name="shake_timer" type="Timer" parent="."]

[node name="shake_tween" type="Tween" parent="."]

[connection signal="timeout" from="shake_timer" to="." method="_on_shake_timer_timeout"]
